syntax = "proto3";
package routerprotocol.routerchain.voyager;

import "multichain/chain_type.proto";
import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";
import "routerchain/voyager/voyager_deposit_update_info_status.proto"; 


option go_package = "github.com/router-protocol/sdk-go/routerchain/voyager/types";

message DepositUpdateInfoRequest {
  uint64 deposit_id = 1; 
  string srcChainId = 2; 
  routerprotocol.routerchain.multichain.ChainType srcChainType = 3; 
  string srcTxHash = 4; 
  uint64 srcTimestamp = 5; 
  string contract = 6; 
  uint64 eventNonce = 7; 
  uint64 blockHeight = 8; 
  string                                          feeAmount  = 9 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
  bool initiatewithdrawal = 10; 
  string srcToken = 11; 
  VoyagerDepositUpdateInfoStatus status = 12; 
  
}


message DepositUpdateInfoRequestClaimHash {
  uint64 deposit_id = 1; 
  string srcChainId = 2; 
  routerprotocol.routerchain.multichain.ChainType srcChainType = 3; 
  string srcTxHash = 4; 
  uint64 srcTimestamp = 5; 
  string contract = 6; 
  uint64 eventNonce = 7; 
  uint64 blockHeight = 8; 
  string                                          feeAmount  = 9 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
  string srcToken = 10; 
  bool initiatewithdrawal = 11;   
}


// this line is used by starport scaffolding # genesis/types/import